--- a/src/components/ReaderModal.module.css
+++ b/src/components/ReaderModal.module.css
@@ -4,13 +4,14 @@
     /* top: 0; left: 0; width: 100%; height: 100%; */
     background: rgba(0, 0, 0, 0.7);
     backdrop-filter: blur(5px);
-    z-index: 2000;
+    z-index: 9999;
     display: flex;
     justify-content: center;
     align-items: center;
     opacity: 0;
     transition: opacity 0.3s ease;
     padding: 1rem;
+    overscroll-behavior: contain;
 }
 
 .overlay.open {
@@ -74,6 +75,7 @@
     padding: 2rem;
     /* Soft Paper Texture Background */
     background-color: #151515;
+    overscroll-behavior: contain;
 }
 
 .contentScroll::-webkit-scrollbar {
